--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         goals
       </p>
       <button id = "start-btn"> Get Started (Click) </button>
-      <p id = "test"> Test </p>
+      <ul id = "resol"></ul>
     </div>
   </body>
 </html>
